--- a/pom.xml
+++ b/pom.xml
@@ -71,7 +71,11 @@
 			<version>3.5.3</version>
 		</dependency>
 
-
+		<dependency>
+			<groupId>com.razorpay</groupId>
+			<artifactId>razorpay-java</artifactId>
+			<version>1.4.6</version>
+		</dependency>
 
 
 		<!-- Tests -->
